<resources>
    <string name="app_name">GeChuangMS</string>

    <!--bootombar-->
    <string name="dynamic">dynamic</string>
    <string name="contacts">contacts</string>
    <string name="related">related</string>
    <!--apply for right-->
    <string name="must_acept_all_permission_can_use_app">must acept all permission can use app</string>
    <string name="some_errors_happend">some errors happend</string>
    <!--toolbar-->
    <string name="toolbar_dosomething_like_add">dosomething</string>
    <string name="toolbar_doback">doback</string>
    <string name="toolbar_title_message">title</string>
    <!--navigation-->
    <string name="str_nav_brief_introduction">biref introduction</string>
    <string name="str_nav_elegant_demeanour">elegant demeanour</string>
    <string name="str_nav_about_us">about us</string>
    <string name="str_nav_new_blood">new blood</string>
    <!--underdevelopment-->
    <string name="str_tips">please wait...</string>
    <!--user info-->
    <string name="str_header_signature">Jack of all trades and master of none.</string>
    <!--progress-->
    <string name="load_success">load success</string>
    <string name="load">load...</string>
    <string name="sign_in">sign in</string>
    <string name="sign_in_faild">sign in failed, please try later</string>
    <string name="user_account_error">user account error, please check again</string>
    <string name="user_password_error">user password error, plaase check again</string>
    <string name="user_exits">user exits</string>
    <string name="sign_up">sign up</string>
    <string name="message">message</string>
    <string name="updata_version_error">updata version error</string>
    <string name="upload_version_error">upload version error</string>
    <string name="useless">sorry, it\'s useless</string>

    <!--edit hint-->
    <string name="student_id_hint">Student ID</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="department_hint">Department</string>
    <string name="member">Member</string>
    <string name="officer">Officer</string>


    <!--activity introduction-->
    <string name="gc_introduction_liaocheng">LiaoCheng University</string>
    <string name="gc_introduction_gechuang">GeChuang</string>
    <string name="gc_introduction_computer">Computer Society</string>
    <string name="join_activity_success">join activity success</string>
    <string name="join_tips">cann\'t join</string>
    <string name="tv_gc_logo">格 物 致 知 &#160; &#160; 创 新 不 止</string>

    <!--find password-->
    <string name="use_email">use email</string>
    <string name="use_phone">use phone</string>
    <string name="find_password">find password</string>
    <string name="get_code">get code</string>
    <string name="code">Code</string>
    <string name="new_password_hint">New password</string>
    <string name="updata_password_success">update password success</string>
    <string name="email">Email</string>
    <string name="check_email">please check your email</string>
    <string name="forget_your_password">forgot your password</string>
    <string name="phone_can_no_be_empty">phone can\'t be empty</string>
    <string name="code_or_password_can_no_be_empty">code or password can\'t be empty</string>
    <string name="log_out">log out</string>
    <string name="age">Age</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="home">Home</string>
    <string name="signature">Signature</string>
    <string name="updata_success">updata success</string>
    <string name="thanks_for_feedback">thanks for your feedback</string>
    <string name="lou_out">Log out</string>


</resources>
