<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tv_activity_introduction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            style="@style/Introduction_Title"
            android:text="@string/gc_introduction_liaocheng"/>
        <TextView
            style="@style/Introduction_Title"
            android:text="@string/gc_introduction_gechuang"/>
        <TextView
            style="@style/Introduction_Title"
            android:text="@string/gc_introduction_computer"/>
    </LinearLayout>

    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>