<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_header" />

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/phone_hint"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/code"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/bt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_code"
            android:layout_marginRight="30dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/ed_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:layout_margin="30dp"/>

    <ImageView
        android:id="@+id/im_no"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_no"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_update_password_error_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/im_yes"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_yes"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_update_password_success_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/updata_password_success"
        android:visibility="gone"/>

</LinearLayout>