<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/image_geader"
        layout="@layout/user_image_header"/>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:background="@mipmap/ic_back"
        android:layout_alignBottom="@+id/bt_done"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <Button
        android:id="@+id/bt_done"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:background="@mipmap/ic_done"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_alignRight="@+id/ed_department"
        android:layout_alignEnd="@+id/ed_department" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image_geader"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_user_info" />

    <EditText
        android:id="@+id/ed_department"
        style="@style/Updata_User_Info"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/department_hint" />

    <EditText
        android:id="@+id/ed_age"
        style="@style/Updata_User_Info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed_department"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/age"
        android:inputType="number"/>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed_age"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:src="@mipmap/ic_gender" />

        <RadioButton
            android:id="@+id/rb_boy"
            style="@style/Gender_RG"
            android:layout_marginRight="66dp"
            android:checked="true"
            android:text="@string/boy" />

        <RadioButton
            android:id="@+id/rb_girl"
            style="@style/Gender_RG"
            android:paddingRight="15dp"
            android:text="@string/girl" />
    </RadioGroup>

    <EditText
        android:id="@+id/ed_email"
        style="@style/Updata_User_Info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rg_gender"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/ed_home"
        style="@style/Updata_User_Info"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/ed_email"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/home"
        android:inputType="text"/>

    <EditText
        android:id="@+id/ed_signature"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/signature"
        android:layout_below="@+id/ed_home"
        android:layout_alignLeft="@+id/ed_email"
        android:layout_alignStart="@+id/ed_email"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:inputType="text"/>

</RelativeLayout>